Revision history for Petal.

0.73
	- Implemented TIED hash caching
	- Implemented 'fresh' keyword for clearing cache when necessary

0.72 Fri Sep 20 12:44:43 2002
	- Fixed a variable interpolation bug ($align - $align_opposite)
	- Fixed another loop scoping bug
	- Fixed loop scoping bug

0.71 Thu Sep 12 14:39:58 2002
	- Fixed warning in Petal::Canonicalizer::XML.pm
	- Updated documentation
	- Added list of hashrefs test

0.7 Sat Sep  7 19:19:42 2002
	- Fixed inline interpolation ${expr} bug
	- Everything is now XML encoded unless the 'structure' keyword is present
	- Added coderefs modifiers
	- Turned most modifiers into coderefs in Petal::Hash
	- Added Lucas Saud's <lucas.marinho@uol.com.br> patch for code padding
	- Fixed <?petal:repeat name="element list"?> bug

0.64 Tue Sep  3 15:48:23 2002
	- Fixed extra AUTOLOAD bug
	- Fixed _split_expression critical bug 
	- Added test
	- Sorry for the broken 0.63 release :-(

0.63 Mon Sep  2 17:01:23 2002
	- Fixed petal:repeat documentation bug
	- Changed Petal::Parser::HTMLWrapper to preserve ignorable whitespaces
	- Fixed Petal stripping comments with Petal::Parser::HTMLWrapper
	- Fixed Petal not invoking methods which are defined via AUTOLOAD
	- Changed Petal::Canonicalizer::_split_expression to work with Perl 5.8.0
	- Changed Petal::Canonicalizer::_split_expression to remove warnings

0.62 Fri Aug 16 11:17:10 2002
	- Fixed entity bug due to XML::Parser expanding entities
	- Fixed method parameters bug
	- Fixed another method parameters bug
	- Fixed a couple of small documentation bugs
	- Fixed an XML declaration bug
	- Fixed '"' being converted to '&quot;' by Petal::Parser::HTMLWrapper
 
0.61 Mon Aug 12 11:50:50 2002
	- Fixed 'dummy content' closing tag bug
	- Fixed <a petal:attr="href string:test.cgi?fn=$first_name"> bugfix bug!

0.6 Sat Aug 10 14:59:53 2002
        - Fixed <a petal:attr="href string:test.cgi?fn=$first_name"> bug
	- Fixed declarations being striped out
	- Fixed <some:tag> being turned into <some> bug