@@ -1,4 +1,4 @@
-Petal version 0.71
+Petal version 0.73
 ==================
 
 Petal stands for "Perl Template Attribute Language". It is inspired from the
