@@ -2,7 +2,7 @@ package main;
 use lib ('lib');
 use Test;
 
-BEGIN {print "1..3\n";}
+BEGIN {print "1..4\n";}
 END {print "not ok 1\n" unless $loaded;}
 use Petal;
 $loaded = 1;
@@ -23,3 +23,5 @@ $Petal::OUTPUT = 'HTML';
 $template = new Petal ('delete_attribute.xml');
 $string = $template->process;
 ($string =~ /type/) ? print "not ok 3\n" : print "ok 3\n";
+
+($string =~ /\Qbar="0"\E/) ? print "ok 4\n" : print "not ok 4\n";
