@@ -1,1 +1,4 @@
-<input type="foo" petal:attributes="type nothing" />
+<xml>
+  <input type="foo" petal:attributes="type nothing" />
+  <foo bar="baz" petal:attributes="bar string:0" />
+</xml>
